fixing css on mobile

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -167,3 +167,20 @@ div {
   user-select: none;
   -o-user-select: none;
 }
+
+
+.dApp-widget {
+  background-image:url("../styles/images/BackShroom.jpg") !important;
+  background-color: var(--accent);
+  padding: 24px;
+  width:40% !important;
+  border-radius: 24px;
+  border: 4px dashed var(--secondary);
+  box-shadow: 0px 5px 11px 2px rgba(0,0,0,0.7);
+}
+
+@media (min-width:300px) and (max-width:700px) {
+  .dApp-widget {
+    width: 100% !important;
+  }
+}
